# virtrtlab

./: .gitignore  LICENSE  LICENSE.CC-BY-4.0  LICENSE.MIT  Makefile  README.md  dkms.conf  pytest.ini
.github/agents/: git-github-expert.agent.md  kernel-dev.agent.md  kernel-reviewer.agent.md  python-dev.agent.md  python-reviewer.agent.md  spec-author.agent.md  spec-expert.agent.md  spec-reviewer.agent.md  userspace-dev.agent.md  userspace-reviewer.agent.md
.github/instructions/: git-github-expert.instructions.md  kernel-dev.instructions.md  kernel-reviewer.instructions.md  python-dev.instructions.md  python-reviewer.instructions.md  spec-author.instructions.md  spec-expert.instructions.md  spec-reviewer.instructions.md  userspace-dev.instructions.md  userspace-reviewer.instructions.md
.github/prompts/: kernel-change.prompt.md  kernel-review.prompt.md  prepare-pr.prompt.md  python-change.prompt.md  python-review.prompt.md  (+4 more)
cli/: README.md  pyproject.toml  virtrtlabctl.py
daemon/: Makefile  epoll_loop.c  epoll_loop.h  instance.c  instance.h  main.c  virtrtlabd
docs/: README.md  daemon.md  device-contract.md  kernel-requirements.md  privilege-model.md  simulator-contract-v0.2.0.md  socket-api.md  spec.md  sysfs.md  virtrtlabctl-v0.2.0.md  virtrtlabctl.md
examples/: Makefile  README.md
install/: 90-virtrtlab.rules  virtrtlab-dev.sudoers  virtrtlab.service
kernel/: Makefile  README.md  virtrtlab_core.c  virtrtlab_core.h  virtrtlab_gpio.c  virtrtlab_uart.c
scripts/: build_deb_package.sh
tests/: README.md
userspace/: README.md  virtrtlabctl.py
(+45 files in other folders)
